@@ -127,4 +127,4 @@ Copyright \(co 2003-2008 FreeIPMI Core Team.
 This program is free software; you may redistribute it under the terms of
 the GNU General Public License.  This program has absolutely no warranty.
 .SH "SEE ALSO"
-bmc-config.conf(5), pef-config(8), ipmi-sensors-config(8)
+bmc-config.conf(5), freeipmi(7), pef-config(8), ipmi-sensors-config(8)
