@@ -1,5 +1,5 @@
 .\"#############################################################################
-.\"$Id: bmc-watchdog.8.pre.in,v 1.8 2008-03-28 16:52:54 chu11 Exp $
+.\"$Id: bmc-watchdog.8.pre.in,v 1.9 2008-04-07 22:55:29 chu11 Exp $
 .\"#############################################################################
 .\"  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
 .\"  Copyright (C) 2004-2007 The Regents of the University of California.
@@ -301,3 +301,5 @@ something other than SMS/OS.
 Developed by Albert Chu <chu11@llnl.gov> on LLNL's GNU/Linux clusters.
 This software is open source and distributed under the terms of the
 Gnu GPL.
+.SH "SEE ALSO"
+freeipmi(7)
