@@ -16,3 +16,5 @@ Report bugs to <freeipmi\-devel@gnu.org>.
 Copyright \(co 2005-2008 FreeIPMI Core Team
 This program is free software; you may redistribute it under the terms of
 the GNU General Public License.  This program has absolutely no warranty.
+.SH "SEE ALSO"
+freeipmi(7)
