@@ -1,5 +1,5 @@
 .\"#############################################################################
-.\"$Id: ipmiping.8.in,v 1.19 2008-04-04 17:51:34 chu11 Exp $
+.\"$Id: ipmiping.8.in,v 1.20 2008-04-07 22:55:30 chu11 Exp $
 .\"#############################################################################
 .\"  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
 .\"  Copyright (C) 2003-2007 The Regents of the University of California.
@@ -96,4 +96,4 @@ This software is open source and distributed under the terms of the
 Gnu GPL.  Command and manpage based off 
 .B ping(8).
 .SH "SEE ALSO"
-ping(8), rmcpping(8)
+freeipmi(7), ping(8), rmcpping(8)
