@@ -1,5 +1,5 @@
 .\"#############################################################################
-.\"$Id: ipmipower.8.pre.in,v 1.17 2008-04-05 12:43:53 chu11 Exp $
+.\"$Id: ipmipower.8.pre.in,v 1.18 2008-04-07 22:55:30 chu11 Exp $
 .\"#############################################################################
 .\"  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
 .\"  Copyright (C) 2003-2007 The Regents of the University of California.
@@ -528,4 +528,4 @@ Developed by Albert Chu <chu11@llnl.gov> on LLNL's GNU/Linux clusters.
 This software is open source and distributed under the terms of the
 Gnu GPL.
 .SH "SEE ALSO"
-bmc-config(8), ipmipower.conf(5)
+ipmipower.conf(5), freeipmi(7), bmc-config(8)
