@@ -22,6 +22,10 @@
 	manpage.
 
 	* common/doc: Fix make dist bug.
+
+	* Add freeipmi(7) to "SEE ALSO" on all appropriate manpages.
+
+	* Various manpage minor fixes.
 	
 2008-04-05  Albert Chu <chu11@llnl.gov>
 
